--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -8,12 +8,7 @@
     margin-right: auto;
   }
   
-  .mainHeading {
-    font-size: 2.5rem;
-    margin-bottom: 1rem;
-    color: #3D52A0;
-  }
-  
+ 
   .highlight {
     color: #7091E6;
   }
@@ -70,10 +65,34 @@
   
   .heading2 {
     font-size: 1.75rem;
-    margin-bottom: 1rem;
   }
   
   .img {
     border-radius: 10px;
     margin-bottom: 1rem;
   }
+
+  
+.servicesHeading {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.servicesHeading h2 {
+  font-size: 2.5rem;
+  color: #3D52A0;
+  margin-bottom: 1rem;
+  position: relative;
+  display: inline-block;
+}
+
+.servicesHeading h2::after {
+  content: '';
+  display: block;
+  width: 60px;
+  height: 4px;
+  background-color: #FFD700;
+  margin: 0.5rem auto 0;
+  border-radius: 2px;
+}
+
